3L accessories and misc updates

--- a/waterblast-automation/autobox-abx-pro.html
+++ b/waterblast-automation/autobox-abx-pro.html
@@ -74,6 +74,12 @@ master-slider: yes
         <li>Multiple mounting options for pipes with or without a flange</li>
         <li>Lightweight, ergonomic control box operates all features from outside the blast zone</li>
       </ul>
+      
+<!--
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/navigator" data-toggle="tooltip" title="Navigator">NAV</a> <a class="btn" href="/boiler-tube-cleaner" data-toggle="tooltip" title="Boiler Tube Cleaner">BTC</a>
+      </div>
+-->
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
 
@@ -171,12 +177,12 @@ master-slider: yes
         <div class="row row-centered">
           <div class="col-sm-4 col-centered">
             <!-- Lightbox call -->
-          <div>
-            <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #pro-vid">
-              <img src="/assets/vid/thumb/pro-vid.png" alt="AutoBox ProDrive Overviewvideo" class="img-responsive" />
-            </a>
-          </div>
-          <!-- End Lightbox call -->
+            <div>
+              <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #pro-vid">
+                <img src="/assets/vid/thumb/pro-vid.png" alt="AutoBox ProDrive Overviewvideo" class="img-responsive" />
+              </a>
+            </div>
+            <!-- End Lightbox call -->
             <p class="caption">ABX-PRO Overview</p>
           </div>
         </div>
