--- a/waterblast-automation/fin-fan-accessory.html
+++ b/waterblast-automation/fin-fan-accessory.html
@@ -30,7 +30,7 @@ master-slider: yes
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/fin-fan-07.jpg" alt="Fin fan cooler cleaning kit">
             <img class="ms-thumb" src="/assets/img/product/thumb-fin-fan-07.jpg" alt="thumb">
-              <a data-type="video" href="https://www.youtube.com/embed/geLBK4Tuj_M"> </a>
+<!--              <a data-type="video" href="https://www.youtube.com/embed/geLBK4Tuj_M"> </a>-->
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/fin-fan-06.jpg" alt="Fin fan cooler cleaning kit">
@@ -129,6 +129,7 @@ master-slider: yes
               </table>
               <p>&#42;<em>Custom rail lengths available</em></p>
             </div>
+<!--
             <aside class="col-sm-4 col-sm-offset-3 aside-box">
               <h3>Package includes:</h3>
                 <ul class="list-unstyled">
@@ -139,6 +140,12 @@ master-slider: yes
                   <li>2 x Guide Tube</li>
                   <em><strong>Please Note:</strong> This product is offered as an accessory to the <a href="/abx-2l">AutoBox ABX-2L</a>. The required ABX-2L tractor and drive carriages are sold separately.</em>
                 </ul>
+            </aside>
+-->
+            <aside class="col-sm-3 col-sm-offset-4 aside-box">
+              <h3>Need Support?</h3>
+              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
+              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
             </aside>
             
           </section>
@@ -154,7 +161,7 @@ master-slider: yes
             <div class="col-sm-4">
               <ul class="list-unstyled basic">
                 <h3>Documentation</h3>
-                <li><a href="/assets/pdf/data-sheets/fin_fan_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Data Sheet</a></li>
+                <li><a href="/assets/pdf/data-sheets/FF_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Data Sheet</a></li>
                 <li><a href="/assets/pdf/tool-talks/FF_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Fin Fan Accessory Tool Talk</a></li>
               </ul>
             </div>
@@ -173,7 +180,7 @@ master-slider: yes
                 <a href="#" data-featherlight="/assets/vid/vids.html #fin-fan-vid">
                   <img src="assets/vid/thumb/fin-fan-vid.jpg" alt="Fin Fan exchanger cleaning accessory video" class="img-responsive" />
                 </a>
-                <p class="caption">Fin Fan Accessory Overview</p>
+                <p class="caption">Fin Fan Accessory Overview <em>- ABX-2L version</em></p>
                 <!-- end lightbox call -->
               </div>
               <div class="col-sm-4 col-centered">
@@ -181,7 +188,7 @@ master-slider: yes
                 <a href="#" data-featherlight="/assets/vid/vids.html #fin-fan-train-vid">
                   <img src="assets/vid/thumb/fin-fan-train-vid.png" alt="Fin Fan Accessory training video" class="img-responsive" />
                 </a>
-                <p class="caption">Fin Fan Accessory Training</p>
+                <p class="caption">Fin Fan Accessory Training <em>- ABX-2L version</em></p>
                 <!-- end lightbox call -->
               </div>
             </div>
