--- a/waterblast-automation/hose-containment.html
+++ b/waterblast-automation/hose-containment.html
@@ -28,21 +28,29 @@ master-slider: yes
       <div class="ms-showcase2-template">
         <div class="master-slider ms-skin-light-2" id="masterslider">
           <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/hcs-01.jpg" alt="Hose containment for exchanger cleaning">
-            <img class="ms-thumb" src="/assets/img/product/thumb-hcs-01.jpg" alt="thumb">
-              <a data-type="video" href="https://www.youtube.com/embed/jvWa45TniS0"> </a>
-          </div>
-          <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/hcs-02.jpg" alt="Hose containment for exchanger cleaning">
-            <img class="ms-thumb" src="/assets/img/product/thumb-hcs-02.jpg" alt="thumb">
-          </div>
-          <div class="ms-slide">
-            <img src="/assets/img/blank.gif" data-src="/assets/img/product/hcs-03.jpg" alt="Hose containment for exchanger cleaning">
-            <img class="ms-thumb" src="/assets/img/product/thumb-hcs-03.jpg" alt="thumb">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/hcs-11.jpg" alt="Hose containment for exchanger cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-hcs-11.jpg" alt="thumb">
+<!--              <a data-type="video" href="https://www.youtube.com/embed/jvWa45TniS0"> </a>-->
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/hcs-04.jpg" alt="Hose containment for exchanger cleaning">
             <img class="ms-thumb" src="/assets/img/product/thumb-hcs-04.jpg" alt="thumb">
+          </div>
+          <div class="ms-slide">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/hcs-08.jpg" alt="Hose containment for exchanger cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-hcs-08.jpg" alt="thumb">
+          </div>
+          <div class="ms-slide">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/hcs-10.jpg" alt="Hose containment for exchanger cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-hcs-10.jpg" alt="thumb">
+          </div>
+          <div class="ms-slide">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/hcs-12.jpg" alt="Hose containment for exchanger cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-hcs-12.jpg" alt="thumb">
+          </div>
+          <div class="ms-slide">
+            <img src="/assets/img/blank.gif" data-src="/assets/img/product/hcs-02.jpg" alt="Hose containment for exchanger cleaning">
+            <img class="ms-thumb" src="/assets/img/product/thumb-hcs-02.jpg" alt="thumb">
           </div>
         </div>
       </div>
@@ -61,16 +69,16 @@ master-slider: yes
       <div class="clearfix"></div>
       </div>
 
-      <p class="product-description">The Hose Containment System is a lightweight accessory for the AutoBox family of hose tractors that contains and securely stores hoses typically used for heat exchanger tube cleaning.</p>
-      <p>The Hose Containment System is simple to setup and operate, and greatly increases job site safety by eliminating the potential for high pressure hoses to snag on structure, valves, or other objects. It also increases hose life by reducing wear and makes it easy to store and transport hoses between jobs.</p>     
+      <p class="product-description">The HCS-3L and HCS-2L Hose Containment Systems are lightweight accessories for the AutoBox family of hose tractors that contains and securely stores hoses typically used for heat exchanger tube cleaning.</p>
+      <p>Hose Containment Systems are simple to setup and operate, and greatly increase job site safety by eliminating the potential for high pressure hoses to snag on structure, valves, or other objects. Hose Containment Systems increase hose life by reducing wear and make it easy to store and transport hoses between jobs.</p>
       
       <h2>Features</h2>
       <ul class="feature-list">
-        <li>Reliable hose containment and storage for increased job site safety</li>
-        <li>Easily store and transport hoses between jobs</li>
+        <li>Provides greater job site safety by containing and managing up to 3 high pressure hoses</li>
+        <li>Reduces hose wear and increases hose life by eliminating external abrasion</li>
         <li>Portable design with small footprint</li>
-        <li>Reduces hose wear</li>
-        <li>Lightweight and durable with good corrosion resistance</li>
+        <li>Lightweight and durable construction with good corrosion resistance</li>
+        <li>Reliable hose storage and transport between jobs</li>
       </ul>
 
       <div class="accessories">
@@ -93,23 +101,142 @@ master-slider: yes
         <li><a href="#section-bar-1"><span>Specifications</span></a></li>
         <li><a href="#section-bar-2"><span>Manuals/Docs</span></a></li>
         <li><a href="#section-bar-3"><span>Videos</span></a></li>
-<!--        <li><a href="#section-bar-4"><span>Service Kits</span></a></li>-->
       </ul>
     </nav>
     <div class="content-wrap">
 
       <!-- Specifications -->
       <section id="section-bar-1">
-        <div class="col-sm-5">
+        <div class="col-sm-7">
           <!-- Nav tabs -->
           <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="#tm16" aria-controls="tm16" role="tab" data-toggle="tab">HCS-2L-TM16</a></li>
+            <li role="presentation" class="active"><a href="#3l-tm16" aria-controls="3l-tm16" role="tab" data-toggle="tab">HCS-3L-TM16</a></li>
+            <li role="presentation"><a href="#3l-m24" aria-controls="3l-m24" role="tab" data-toggle="tab">HCS-3L-M24</a></li>
+            <li role="presentation"><a href="#tm16" aria-controls="tm16" role="tab" data-toggle="tab">HCS-2L-TM16</a></li>
             <li role="presentation"><a href="#m24" aria-controls="m24" role="tab" data-toggle="tab">HCS-2L-M24</a></li>
           </ul>
           <!-- Tab panes -->
           <div class="tab-content">
-            <!-- TM16 -->
-            <div role="tabpanel" class="tab-pane active" id="tm16">
+            <!-- 3L-TM16 -->
+            <div role="tabpanel" class="tab-pane active" id="3l-tm16">
+              <table class="table specs table-hover">
+              <tbody>
+                <tr>
+                  <th>Tool Model</th>
+                  <td colspan="2">HCS-3L-TM16</td>
+                </tr>
+                <tr>
+                  <th>Maximum Pressure</th>
+                  <td>22k psi</td>
+                  <td><span class="metric">1500 bar</span></td>
+                </tr>
+                <tr>
+                  <th>Hose Size</th>
+                  <td colspan="2">3/4, 4/4–8/4</td>
+                </tr>
+                <tr>
+                  <th>Storage Capacity&#42;</th>
+                  <td>75 ft (3 hoses)</td>
+                  <td><span class="metric">23 m</span></td>
+                </tr>
+                <tr>
+                  <th>Max. Hose Bend Radius</th>
+                  <td>8 in.</td>
+                  <td><span class="metric">203 mm</span></td>
+                </tr>
+                <tr>
+                  <th>Swivel Inlet</th>
+                  <td colspan="2">1.00 Type M to MP12</td>
+                </tr>
+                <tr>
+                  <th>Hose Connections</th>
+                  <td colspan="2">.56 Type M to .75 Type M</td>
+                </tr>
+                <tr>
+                  <th>Dimensions</th>
+                  <td>37 x 22 in.</td>
+                  <td><span class="metric">94 x 56 cm</span></td>
+                </tr>
+                <tr>
+                  <th>Snout Length</th>
+                  <td>84 in.</td>
+                  <td><span class="metric">213 cm</span></td>
+                </tr>
+                <tr>
+                  <th>Snout/Cam Size</th>
+                  <td>2 in.</td>
+                  <td><span class="metric">51 mm</span></td>
+                </tr>
+                <tr>
+                  <th>Weight</th>
+                  <td>64 lb</td>
+                  <td><span class="metric">29 kg</span></td>
+                </tr>
+              </tbody>
+              </table>
+              <p>&#42; Based on 8/4 size hose</p>
+            </div>
+            <!-- 3L-M24 -->     
+            <div role="tabpanel" class="tab-pane" id="3l-m24">
+              <table class="table specs table-hover">
+              <tbody>
+                <tr>
+                  <th>Tool Model</th>
+                  <td colspan="2">HCS-3L-M24</td>
+                </tr>
+                <tr>
+                  <th>Maximum Pressure</th>
+                  <td>22k psi</td>
+                  <td><span class="metric">1500 bar</span></td>
+                </tr>
+                <tr>
+                  <th>Hose Size</th>
+                  <td colspan="2">3/4, 4/4–8/4</td>
+                </tr>
+                <tr>
+                  <th>Storage Capacity&#42;</th>
+                  <td>75 ft (3 hoses)</td>
+                  <td><span class="metric">23 m</span></td>
+                </tr>
+                <tr>
+                  <th>Max. Hose Bend Radius</th>
+                  <td>8 in.</td>
+                  <td><span class="metric">203 mm</span></td>
+                </tr>
+                <tr>
+                  <th>Swivel Inlet</th>
+                  <td colspan="2">MP12 to M24C</td>
+                </tr>
+                <tr>
+                  <th>Hose Connections</th>
+                  <td colspan="2">MP6 to BSPP4C</td>
+                </tr>
+                <tr>
+                  <th>Dimensions</th>
+                  <td>37 x 22 in.</td>
+                  <td><span class="metric">94 x 56 cm</span></td>
+                </tr>
+                <tr>
+                  <th>Snout Length</th>
+                  <td>84 in.</td>
+                  <td><span class="metric">213 cm</span></td>
+                </tr>
+                <tr>
+                  <th>Snout/Cam Size</th>
+                  <td>2 in.</td>
+                  <td><span class="metric">51 mm</span></td>
+                </tr>
+                <tr>
+                  <th>Weight</th>
+                  <td>64 lb</td>
+                  <td><span class="metric">29 kg</span></td>
+                </tr>
+              </tbody>
+              </table>
+              <p>&#42; Based on 8/4 size hose</p>
+            </div>
+            <!-- 2L-TM16 -->
+            <div role="tabpanel" class="tab-pane" id="tm16">
               <table class="table specs table-hover">
               <tbody>
                 <tr>
@@ -126,30 +253,28 @@ master-slider: yes
                   <td colspan="2">&le; 6/4</td>
                 </tr>
                 <tr>
-                  <th>Hose Connections</th>
-                  <td colspan="2">.56 Type M to .75 Type M</td>
-                </tr>
-                <tr>
                   <th>Storage Capacity&#42;</th>
                   <td>84 ft (2 hoses)</td>
                   <td><span class="metric">25 m</span></td>
+                </tr>
+                <tr>
+                  <th>Max. Hose Bend Radius</th>
+                  <td>7.1 in.</td>
+                  <td><span class="metric">180 mm</span></td>
                 </tr>
                 <tr>
                   <th>Swivel Inlet</th>
                   <td colspan="2">1.00 Type M to MP12</td>
                 </tr>
                 <tr>
+                  <th>Hose Connections</th>
+                  <td colspan="2">.56 Type M to .75 Type M</td>
+                </tr>
+                <tr>
                   <th>Dimensions</th>
                   <td>28.6 x 15.4 in.</td>
                   <td><span class="metric">73 x 39 cm</span></td>
                 </tr>
-<!--
-                <tr>
-                  <th>Snout Length</th>
-                  <td>90 in.</td>
-                  <td><span class="metric">228 cm</span></td>
-                </tr>
--->
                 <tr>
                   <th>Weight</th>
                   <td>42 lb</td>
@@ -177,30 +302,28 @@ master-slider: yes
                   <td colspan="2">&le; 6/4</td>
                 </tr>
                 <tr>
-                  <th>Hose Connections</th>
-                  <td colspan="2">MP6 to BSPP4C</td>
-                </tr>
-                <tr>
                   <th>Storage Capacity&#42;</th>
                   <td>84 ft (2 hoses)</td>
                   <td><span class="metric">25 m</span></td>
+                </tr>
+                <tr>
+                  <th>Max. Hose Bend Radius</th>
+                  <td>7.1 in.</td>
+                  <td><span class="metric">180 mm</span></td>
                 </tr>
                 <tr>
                   <th>Swivel Inlet</th>
                   <td colspan="2">MP12 to M24C</td>
                 </tr>
                 <tr>
+                  <th>Hose Connections</th>
+                  <td colspan="2">MP6 to BSPP4C</td>
+                </tr>
+                <tr>
                   <th>Dimensions</th>
                   <td>28.6 x 15.4 in.</td>
                   <td><span class="metric">73 x 39 cm</span></td>
                 </tr>
-<!--
-                <tr>
-                  <th>Snout Length</th>
-                  <td>90 in.</td>
-                  <td><span class="metric">228 cm</span></td>
-                </tr>
--->
                 <tr>
                   <th>Weight</th>
                   <td>42 lb</td>
@@ -212,18 +335,8 @@ master-slider: yes
             </div>
           </div>
         </div>
-<!--
-        <aside class="col-sm-3 col-sm-offset-4 aside-box">
-          <h3>Package includes:</h3>
-            <ul class="list-unstyled">
-              <li>AutoStroke automatic blockage sensor</li>
-              <li>Manifold assembly</li>
-              <li>Two 1/2-inch air lines</li>
-              <li>Two 1/4-inch tubing lines in a nylon sheath</li>
-            </ul>
-        </aside>
--->
-        <aside class="col-sm-3 col-sm-offset-4 aside-box">
+        
+        <aside class="col-sm-3 col-sm-offset-2 aside-box">
           <h3>Need Support?</h3>
           <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
           <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
@@ -235,15 +348,16 @@ master-slider: yes
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Manuals</h3>
-            <li><a href="/assets/pdf/manuals/HCS-2L_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Manual</a></li>
             <li><a href="/assets/pdf/manuals/HCS-3L_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-3L Manual</a></li>
+            <li><a href="/assets/pdf/manuals/HCS-2L_Manual.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Manual</a></li>
           </ul>
         </div>
         <div class="col-sm-4">
           <ul class="list-unstyled basic">
             <h3>Documentation</h3>
-            <li><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Data Sheet</a></li>
-            <li><a href="/assets/pdf/tool-talks/HCS_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Tool Talk</a></li>
+            <li><a href="/assets/pdf/data-sheets/HCS_data_sheet.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;Hose Containment System Data Sheet</a></li>
+            <li><a href="/assets/pdf/tool-talks/HCS-3L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-3L Tool Talk</a></li>
+            <li><a href="/assets/pdf/tool-talks/HCS-2L_tool_talk.pdf" target="_blank"><i class="fa fa-file-text-o"></i> &nbsp;HCS-2L Tool Talk</a></li>
           </ul>
         </div>
         <aside class="col-sm-3 col-sm-offset-1 aside-box">
@@ -266,39 +380,6 @@ master-slider: yes
         </div>
       </section>
 
-      <!-- Kits 
-      <section id="section-bar-4">
-        <div class="col-sm-8">
-          <h3>The following kits are available:</h3>
-          <p><em class="grey">Click to view kit contents</em></p>
-          <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-            <div class="panel panel-default">
-              <div class="panel-heading" role="tab" id="headingOne">
-                <h4 class="panel-title">
-                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                    <strong>ABX-500 EPP</strong> AutoBox ABX-500 Extra Parts Package<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
-                  </a>
-                </h4>
-              </div>
-              <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                <div class="panel-body">
-                  <ul>
-                    <li>Drive roller assembly</li>
-                    <li>Anti-seize</li>
-                    <li>Square-end key</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <aside class="col-sm-3 col-sm-offset-1 aside-box">
-          <h3>Need Support?</h3>
-          <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
-          <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
-        </aside>
-      </section> -->
-
     </div><!-- /content -->
   </div><!-- /tabs -->
 </section>
@@ -312,16 +393,16 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
+        <a href="/abx-3l"><img src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L">
+        <h5>AutoBox ABX-3L</h5></a>
+      </div>
+      <div class="item">
         <a href="/abx-2l"><img class="img-responsive" src="/assets/img/product/thumb-abx-2l-01.jpg" alt="AutoBox ABX-2L exchanger tube cleaning">
         <h5>AutoBox ABX-2L</h5></a>
       </div>
       <div class="item">
         <a href="/abx-pro"><img class="img-responsive" src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO hose drive for pipe cleaning">
         <h5>AutoBox ABX-PRO</h5></a>
-      </div>
-      <div class="item">
-        <a href="/abx-3l"><img src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L">
-        <h5>AutoBox ABX-3L</h5></a>
       </div>
       <div class="item">
         <a href="/lightweight-positioner"><img src="/assets/img/product/thumb-lwp-02.jpg" alt="Lightweight positioner for exchanger cleaning">
