--- a/waterblast-automation/lightweight-positioner.html
+++ b/waterblast-automation/lightweight-positioner.html
@@ -66,6 +66,10 @@ master-slider: yes
         <li>Quick and simple assembly</li>
         <li>Clamp and bolt attachment options available</li>
       </ul>
+      
+      <div class="accessories">
+        <h3>Compatible with:</h3> <a class="btn" href="/abx-3l" data-toggle="tooltip" title="AutoBox ABX-3L">ABX-3L</a> <a class="btn" href="/abx-2l" data-toggle="tooltip" title="AutoBox ABX-2L">ABX-2L</a> <a class="btn" href="/abx-pro" data-toggle="tooltip" title="AutoBox ABX-PRO">ABX-PRO</a>
+      </div>
 
       <a href="/contact.html" class="btn btn-lg btn-block contact" role="button" style="margin-top:30px;">Contact Us for Availability</a>
     </div>
@@ -279,14 +283,6 @@ master-slider: yes
   <div class="row">     
     <div id="owl-related" class="owl-carousel owl-theme">
       <div class="item">
-        <a href="/banshee"><img class="img-responsive" src="/assets/img/product/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
-        <h5>Banshee Rotary Tools</h5></a>
-      </div>
-      <div class="item">
-        <a href="/fin-fan-accessory"><img class="img-responsive" src="/assets/img/product/thumb-fin-fan-07.jpg" alt="ABX-2L fin fan cleaning kit">
-        <h5>Fin Fan Accessory</h5></a>
-      </div>
-      <div class="item">
         <a href="/abx-pro"><img class="img-responsive" src="/assets/img/product/thumb-abx-pro-02.jpg" alt="AutoBox ABX-PRO hose drive for pipe cleaning">
         <h5>AutoBox ABX-PRO</h5></a>
       </div>
@@ -298,6 +294,22 @@ master-slider: yes
         <a href="/abx-3l"><img class="img-responsive" src="/assets/img/product/thumb-abx-3l-03.jpg" alt="AutoBox ABX-3L exchanger tube cleaning">
         <h5>AutoBox ABX-3L</h5></a>
       </div>
+      <div class="item">
+        <a href="/banshee"><img class="img-responsive" src="/assets/img/product/thumb-banshee-01.jpg" alt="Banshee rotary tube cleaners">
+        <h5>Banshee Rotary Tools</h5></a>
+      </div>
+      <div class="item">
+        <a href="/fin-fan-accessory"><img class="img-responsive" src="/assets/img/product/thumb-fin-fan-07.jpg" alt="ABX-2L fin fan cleaning kit">
+        <h5>Fin Fan Accessory</h5></a>
+      </div>
+      <div class="item">
+        <a href="/hose-containment"><img class="img-responsive" src="/assets/img/product/thumb-hcs-01.jpg" alt="Hose containment for exchanger cleaning">
+        <h5>Hose Containment System</h5></a>
+      </div>
+      <div class="item">
+        <a href="/autostroke"><img src="/assets/img/product/thumb-ast-02.jpg" alt="AutoStroke AST-100 for AutoBox tube lancing">
+        <h5>AutoStroke</h5></a>
+      </div>
     </div>
   </div>
 </section>
@@ -308,7 +320,7 @@ master-slider: yes
   <div class="container padding-tb-30">
     <div class="col-md-7">
 
-      <h2>Flexible positioning for the AutoBox ABX-2L</h2>
+      <h2>Flexible positioning, accurate indexing</h2>
       <p>Adaptable to different sizes of tube bundles, the Lightweight Positioner delivers controlled, efficient, safe cleaning of heat exchanger tube IDs.</p>
     </div>
     <div class="col-md-4 col-md-offset-1">
