--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -262,7 +262,7 @@ landing: yes
                 </tr>
                 <tr>
                   <th>Flow Range</th>
-                  <td>1.7-11 gpm &nbsp;<span class="metric">6-42 l/min</span></td>
+                  <td>1.7-11 gpm<br><span class="metric">6-42 l/min</span></td>
                 </tr>
               </tbody>
             </table>
@@ -583,7 +583,7 @@ landing: yes
           <a href="/lightweight-positioner" class="search-text">
             <img src="/assets/img/product/lwp-02.jpg" class="img-responsive" />
             <h3>Lightweight Positioner</h3>
-            <h5>For AutoBox ABX-2L</h5>
+            <h5>For AutoBox systems</h5>
             <table class="table">
               <tbody>
                 <tr>
@@ -939,7 +939,7 @@ landing: yes
               <tbody>
                 <tr>
                   <th>Pressure Range</th>
-                  <td>5–15k psi &nbsp;<span class="metric">340–1000 bar</span></td>
+                  <td>5–22k psi<br><span class="metric">340–1500 bar</span></td>
                 </tr>
                 <tr>
                   <th>Flow Range</th>
