navigator and SA EU dealer updates

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -62,7 +62,7 @@
   <iframe width="854" height="480" src="https://www.youtube.com/embed/3M_OFkQvRZw?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="nav-vid">
-  <iframe width="854" height="480" src="https://www.youtube.com/embed/TgKqzxyf72A?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/PwEAwYsxAMc?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
 <div id="nav-train-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/-wN6vijWhWI?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
