--- a/loc-europe.html
+++ b/loc-europe.html
@@ -45,7 +45,8 @@ contact-europe: yes
 
       <div class="col-sm-7 col-sm-offset-1">
         <div class="row margin-bottom-30">
-          <p>StoneAge Europe provides industry-leading equipment for high pressure waterblasting and sewer jetting, along with world-class technical support, to industrial cleaning contractors across the European Economic Area.</p>
+          <p style="font-size:120%;">StoneAge Europe provides industry-leading equipment for high pressure waterblasting and sewer jetting, along with world-class technical support, to industrial cleaning contractors across the European Economic Area.</p>
+          <a href="#" data-featherlight="/assets/img/SA_EU_distribution_map.jpg"><img src="/assets/img/SA_EU_distribution_map.jpg" alt="StoneAge European distribution map" class="float-right img-responsive" /><p class="small text-right"><em>Click to enlarge</em></p></a>        
         </div>
 
         <h3 class="section-heading">Operations and Field Support</h3>
