--- a/waterblast-automation/navigator-small-pipe-cleaning.html
+++ b/waterblast-automation/navigator-small-pipe-cleaning.html
@@ -30,7 +30,7 @@ master-slider: yes
           <div class="ms-slide">
             <img class="ms-brd" src="/assets/img/blank.gif" data-src="/assets/img/product/navigator-03.jpg" alt="StoneAge Navigator small process pipe cleaning">
             <img class="ms-thumb" src="/assets/img/product/thumb-navigator-03.jpg" alt="thumb">
-<!--              <a data-type="video" href="https://www.youtube.com/embed/TgKqzxyf72A"> </a>-->
+              <a data-type="video" href="https://www.youtube.com/embed/PwEAwYsxAMc?rel=0"> </a>
           </div>
           <div class="ms-slide">
             <img src="/assets/img/blank.gif" data-src="/assets/img/product/navigator-02.jpg" alt="StoneAge Navigator small process pipe cleaning">
@@ -198,12 +198,12 @@ master-slider: yes
           <div class="col-sm-4 col-centered">
             <!-- Lightbox call -->
             <div>
-              <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #pro-vid">
-                <img src="/assets/vid/thumb/pro-vid.png" alt="AutoBox ProDrive Overviewvideo" class="img-responsive" />
+              <a href="#" src="/assets/vid/vids.html" data-featherlight="/assets/vid/vids.html #nav-vid">
+                <img src="/assets/vid/thumb/nav-vid.png" alt="Navigator Overview video" class="img-responsive" />
               </a>
             </div>
             <!-- End Lightbox call -->
-            <p class="caption">ABX-PRO Overview</p>
+            <p class="caption">Navigator Overview</p>
           </div>
         </div>
       </section> 
