Nav news update

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@ permalink: /
       </div>
       <!-- Row 1 -->
       <div class="row margin-bottom-20">
-        <a href="/abx-3l"><img src="/assets/img/features/abx-3l_available_02.png" alt="AutoBox ABX-3L heat exchanger cleaning" class="img-responsive"/></a>
+        <a href="/navigator"><img src="/assets/img/features/new_navigator.png" alt="Navigator process pipe cleaning" class="img-responsive"/></a>
       </div>  
       <!-- Row 2 -->
       <div class="row margin-bottom-20">
-        <a href="http://news.stoneagetools.com/warthog-switcher-cuts-time-in-half"><img src="/assets/img/features/switchers.png" alt="Switcher for sewer cleaning" class="img-responsive"/></a>
-      </div>      
+        <a href="/abx-3l"><img src="/assets/img/features/abx-3l_available_02.png" alt="AutoBox ABX-3L heat exchanger cleaning" class="img-responsive"/></a>
+      </div>     
     </div>
     <!-- End Features/Promos -->
 
@@ -131,6 +131,16 @@ permalink: /
     </div>
     <ul class="home-news list-unstyled">
       <li>
+        <h4><a href="http://news.stoneagetools.com/stoneage-europe-open">StoneAge Europe Now Open for Business</a></h4>
+        <p>We are pleased to announce that as of April 3, our StoneAge Europe facility in Malvern, United Kingdom, just outside of Birmingham, is ready to serve our waterblasting customers.<br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, April 2017</small></p>
+      </li>
+      <li>
+        <h4><a href="http://news.stoneagetools.com/navigator-upgrade">New Navigator Upgrade Available</a></h4>
+        <p>The Navigator is the only automated rotary hose device in the industry specifically engineered to clean small diameter process pipe with bends – <em>now redesigned around the proven ABX-PRO.</em><br>
+        <small><i class="fa fa-paper-plane-o"></i> E-blast, April 2017</small></p>
+      </li>
+      <li>
         <h4><a href="http://news.stoneagetools.com/announcing-new-spincat-sc-125">Announcing New SpinCat</a></h4>
         <p>Introducing our newest addition to the SpinCat product line, the SC-125.<br>
         <small><i class="fa fa-paper-plane-o"></i> E-blast, March 2017</small></p>
@@ -144,16 +154,6 @@ permalink: /
         <h4><a href="http://news.stoneagetools.com/west-coast-regional-sales-manager">StoneAge Welcomes New Sales Manager for the West Coast</a></h4>
         <p>StoneAge is pleased to welcome David Moore as our Regional Sales Manager for the West Coast, based in Houston, Texas.<br>
         <small><i class="fa fa-newspaper-o"></i> E-blast, March 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/warthog-switcher-cuts-time-in-half">Warthog Switcher Avalable for 3/4" Inlets</a></h4>
-        <p>The Switcher introduces the ability to run a single sewer jetting tool in either pulling or cleaning mode, without removing the nozzle from the pipe &ndash; <em>Now Available for 3/4 Inlets</em><br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2017</small></p>
-      </li>
-      <li>
-        <h4><a href="http://news.stoneagetools.com/abx-3l-available" target="_blank">Announcing AutoBox ABX-3L</a></h4>
-        <p>StoneAge is excited to announce the release of the AutoBox ABX-3L automated lancing system for your toughest exchanger cleaning jobs.<br>
-        <small><i class="fa fa-paper-plane-o"></i> E-blast, February 2017</small></p>
       </li>
       <li><a href="http://news.stoneagetools.com/">More news here</a></li>
     </ul>
